--- a/app/src/main/res/layout/item_transform.xml
+++ b/app/src/main/res/layout/item_transform.xml
@@ -3,26 +3,29 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
-    <ImageView
-        android:id="@+id/image_view_item_transform"
-        android:layout_width="@dimen/item_transform_image_length"
-        android:layout_height="@dimen/item_transform_image_length"
-        android:layout_margin="8dp"
-        android:contentDescription="@string/image_view_item_transform_content_description"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:src="@tools:sample/avatars" />
+    android:layout_height="wrap_content"
+    android:padding="12dp">
 
     <TextView
-        android:id="@+id/text_view_item_transform"
-        android:layout_width="wrap_content"
+        android:id="@+id/text_service_name"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@id/image_view_item_transform"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="This is item # xx" />
+        tools:text="wakaama-lwm2m" />
+
+    <TextView
+        android:id="@+id/text_service_address"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/text_service_name"
+        tools:text="192.168.1.20:5683" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
